# gwas-meowdels

./: main.py  pyproject.toml
src/gwascatalog/sumstat/: _type_funcs.py  enums.py  types.py
